# spock-exercise

./: .gitignore  LICENSE  Makefile  mud.cabal  stack.yaml
app/: Actions.hs  App.hs  AppConfig.hs  AppTypes.hs  Main.hs  Responding.hs  Sql.hs  TransferObjects.hs  Types.hs
